# camstream

./: aclocal.m4  configure  configure.ac
autom4te.cache/: output.2  requests  traces.1
plugins/: Makefile.am  Makefile.in  gstcamstream.c  gstcamstream.h  gstcamstreamplugin.c
tools/: Makefile.am  Makefile.in  gstcamstream.c
