plugin_LTLIBRARIES = libgstcamstream.la

# sources used to compile this plug-in
libgstcamstream_la_SOURCES = gstcamstream.c gstcamstream.h

# compiler and linker flags used to compile this plugin, set in configure.ac
libgstcamstream_la_CFLAGS = $(GST_CFLAGS)
libgstcamstream_la_LIBADD = $(GST_LIBS)
libgstcamstream_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)

